[tool.poetry]
name = "cost-monitor"
version = "0.1.0"
description = ""
authors = ["Dhaval Vadgama <dhaval.it@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode =false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
django-environ = "^0.11.2"
dj-database-url = "^2.2.0"
geckoboard-py = "^1.1.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
notifications-python-client = "^10.0.0"
whitenoise = "^6.7.0"
awscli = "^1.34.6"
boto3 = "^1.35.6"
lxml = "^5.3.0"
requests = "^2.32.3"
prometheus-client = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
